--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -17,7 +17,6 @@ imports:
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: fr
-    uploads_directory: '%kernel.project_dir%/publichamidou/uploaldshamidou'
 
 framework:
     #esi: ~
@@ -90,3 +89,6 @@ fos_user:
     from_email:
         address: "badiaa.bouhdid@esprit.tn"
         sender_name: "badi3a"
+
+gregwar_captcha: ~
+
